# LargeRecommendSystem

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENCE  Makefile  README.md  main.c
data/small/: outmov.txt
include/: LinkedList.h  MatrixSparse.h  Node.h  Pair.h  Tuple.h
include/distances/: Cosine.h  Eucledian.h  Manhattan.h  Pearson.h
lib/: binarySearch.c
src/: LinkedList.c  MatrixSparse.c  Node.c
src/distances/: Cosine.c  Eucledian.c  Manhattan.c
